--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,13 @@ environment:
 dependencies:
   archive: ^4.0.2
   crypto: ^3.0.6
+  endec:
+    hosted: https://pub.wispforest.io
+    version: ^0.1.0
+  endec_json:
+    hosted: https://pub.wispforest.io
+    version: ^0.1.0
+  logging: ^1.3.0
   path: ^1.9.1
   pubspec_parse: ^1.5.0
   shelf: ^1.4.2
@@ -20,5 +27,9 @@ dependencies:
   yaml: ^3.1.3
 
 dev_dependencies:
+  build_runner: ^2.4.14
+  endec_builder:
+    hosted: https://pub.wispforest.io
+    version: ^0.1.0
   lints: ^5.0.0
   test: ^1.24.0
